--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project",
   "version": "1.0.0",
   "description": "learning backend chai ",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +13,14 @@
     "chai"
   ],
   "author": "sarvjeet kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.6"
+  }
 }
